--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,37 @@
 
-/* 
+.traffic-light {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100px;
+  height: 300px;
+  padding: 20px;
+  background-color: black;
+  border-radius: 20px;
+  margin: 50px auto;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.light {
+  width: 80px;
+  height: 80px;
+  margin: 10px;
+  border-radius: 50%;
+  background-color: grey;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
 
-*/
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+.green {
+  background-color: green;
+}
+
+.glow {
+  box-shadow: 0 0 20px 10px white;
+}
